[package]
name = "cfprogram"
version = "0.1.0"
author = "https://github.com/kelvinkirima014"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
borsh = "0.9.3"
borsh-derive = "0.9.3"
solana-program = "1.10.11" 

[dev-dependencies]
solana-program-test = "1.10.11"
solana-sdk = "1.10.11"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
no-entrypoint = []
