[package]
name = "program"
version = "0.1.0"
edition = "2021"
author = "kirima"

[dependencies]
solana-program = "1.10.11"
borsh = "0.9.3"
borsh-derive = "0.9.3"

[features]
no-entrypoint = []

[dev-dependencies]
solana-program-test = "1.10.11"
solana-sdk = "1.10.11"

[lib]
crate-type = ["cdylib", "lib"]